Fix calendar view Add accessible view

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -88,6 +88,7 @@ __help_selection_data_name=Enter a unique name, consisting of lowercase alpha-nu
 __help_selection_string=Enter the string to be displayed in the selectbox.
 __help_storage_media=This field specifies where the uploaded files will be stored.
 __help_title_field=The Title field must always be included in the entry. It can appear only once, and it cannot be deleted.
+__homepage=Homepage
 __html=HTML
 __html_bottom=HTML bottom
 __html_editor_text_area=HTML editor text area
@@ -299,6 +300,10 @@ calendar.day.names.su=Sunday
 calendar.day.names.weekday=weekday
 calendar.day.names.weekendday=weekend day
 
+calendar.beginning=Week beginning
+calendar.day=Day
+calendar.week=Week
+calendar.month=Month
 calendar.first=first
 calendar.second=second
 calendar.third=third
@@ -308,6 +313,7 @@ calendar.start=Start
 calendar.end=End
 calendar.frequency=Frequency
 calendar.when=When
+calendar.views=Views
 calendar.view.popupAltText=Navigate to a different day, week or month.
 
 common.select.none=--none--
