Add more tag support, use interfaces for workflow, remove old liferay util classes not being used.

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -352,6 +352,7 @@ errorcode.no.group.by.the.name=No such group by the name ''{0}''
 errorcode.no.principal.by.the.id=No such principal by the ''{0}''
 errorcode.no.role.by.the.id=No such role by the id ''{0}''
 errorcode.no.such.file=Specified file ''{1}'' does not exist for entry ''{0}''
+errorcode.no.tag.by.the.id=No such tag by the id ''{0}''
 errorcode.no.user.by.the.id=No such user by the id ''{0}''
 errorcode.no.user.by.the.name=No such user by the name ''{0}''
 errorcode.no.workspace.by.the.id=No such workspace by the id ''{0}''
