Add workspace definition

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -10,6 +10,7 @@ __add_a_new_forum_view=Add a new folder view
 __add_a_new_profile_view=Add a new profile listing view
 __add_a_new_profile_entry_view=Add a new profile entry definition
 __add_a_new_workflow_process=Add a new workflow process
+__add_a_new_workspace_view=Add a new workspace definition
 __alignment=Alignment
 __allow_multiple=Allow multiple
 __attach_files=Attach files
@@ -30,6 +31,7 @@ __data_items_from_the_entry_form=Data items from the Entry Form
 __data_name=Data name
 __date=Date
 __default_entry_view=Default entry view
+__default_workspace_view=Default workspace view
 __internal_webdav=Internal WebDAV server
 __definitions=Definitions
 __delete=Delete
@@ -88,6 +90,7 @@ __help_selection_data_name=Enter a unique name, consisting of lowercase alpha-nu
 __help_selection_string=Enter the string to be displayed in the selectbox.
 __help_storage_media=This field specifies where the uploaded files will be stored.
 __help_title_field=The Title field must always be included in the entry. It can appear only once, and it cannot be deleted.
+__help_workspace_view_type=Standard = simple workspace view; Team = team oriented workspace; Dashboard = workspace with status roll-up
 __homepage=Homepage
 __html=HTML
 __html_bottom=HTML bottom
@@ -201,6 +204,10 @@ __workflow_processes=Workflow processes
 __workflow_variable=Workflow variable
 __workflow_variable_name=Variable name
 __workflow_variable_value=Variable value
+__workspace_dashboard=Dashboard workspace
+__workspace_standard=Standard workspace
+__workspace_team=Team workspace
+__workspace_view=Workspace view definition
 __zonName=Zon user name
 
 administration.configure_ldap=Configure LDAP
@@ -215,6 +222,7 @@ administration.definition_builder_folder_view_designer=Folder designer
 administration.definition_builder_profile_listing_designer=Profile listing designer
 administration.definition_builder_profile_designer=Profile designer
 administration.definition_builder_workflow_designer=Workflow designer
+administration.definition_builder_workspace_designer=Workspace designer
 administration.title=Sitescape Administration
 administration.configure_notify=Forum outgoing e-mail
 administration.configure_posting_job=Configure site incoming email schedule
