--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -204,6 +204,7 @@ __workflow_processes=Workflow processes
 __workflow_variable=Workflow variable
 __workflow_variable_name=Variable name
 __workflow_variable_value=Variable value
+__workspace_binder_list=List of the folders and workspaces belonging to this workspace
 __workspace_dashboard=Dashboard workspace
 __workspace_standard=Standard workspace
 __workspace_team=Team workspace
