Dynamic workspace tree

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -448,8 +448,8 @@ forum.notConfigured=The portlet preferences are not set. Choose the edit button 
 forum.selectForums=Select the forums to be shown:
 forum.selectedForums=Currently selected forums:
 forum.unread=Unread entries
-forum.unseenCounts.notLoggedIn=Your session has timed out. Please log in again.
 
+general.notLoggedIn=Your session has timed out. Please log in again.
 general.please_select=--select one--
 
 icon.close=Close
