--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -238,12 +238,23 @@ binder.configure.access_control.addRole=Define role membership
 binder.configure.access_control.currentMembershipSettings=Current role membership settings
 binder.configure.access_control.groups=Groups
 binder.configure.access_control.inheriting=This folder is inheriting its access control settings from its parent folder.
+binder.configure.access_control.notInheriting=This folder is not inheriting its access control settings from its parent folder.
 binder.configure.access_control.modifyRole=Modify role membership
 binder.configure.access_control.nosettings=No roles have been configured.
 binder.configure.access_control.role=Role
 binder.configure.access_control.selectRoleWarning=Please select a role.
 binder.configure.access_control.selectRole=--Select the role to be added--
 binder.configure.access_control.users=Users
+binder.configure.definitions.inheritance=Definition inheritance
+binder.configure.definitions=Configure views/entries/workflows
+binder.configure.definitions.inheriting=Inheriting definition settings.
+binder.configure.definitions.notInheriting=Not inheriting definition settings.
+binder.configure.definitions.inherit=Inherit definitions:
+binder.configure.allowedViews=Allowed folder views
+binder.configure.defaultView=Default folder view
+binder.configure.defaultEntryTypes=Default entry types
+binder.configure.profileEntryType=Profile type
+binder.configure.workflowAssociations=Workflow associations
 
 button.add=Add
 button.add_alias=Add alias
@@ -439,11 +450,6 @@ folder.label.name = Name
 folder.label.description=Description
 folder.add.title=Add folder
 
-forum.configure.allowedViews=Allowed folder views
-forum.configure.defaultView=Default folder view
-forum.configure.defaultEntryTypes=Default entry types
-forum.configure.profileEntryType=Profile type
-forum.configure.workflowAssociations=Workflow associations
 forum.notConfigured=The portlet preferences are not set. Choose the edit button to configure the portlet.
 forum.selectForums=Select the forums to be shown:
 forum.selectedForums=Currently selected forums:
