--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -204,11 +204,13 @@ __workflow_processes=Workflow processes
 __workflow_variable=Workflow variable
 __workflow_variable_name=Variable name
 __workflow_variable_value=Variable value
-__workspace_binder_list=List of the folders and workspaces belonging to this workspace
-__workspace_dashboard=Dashboard workspace
-__workspace_standard=Standard workspace
-__workspace_team=Team workspace
-__workspace_view=Workspace view definition
+__workspace_attachments=Attached files
+__workspace_binder_list=Workspace and folder list
+__workspace_dashboard=Workspace dashboard
+__workspace_data_item=Data item name
+__workspace_form=Workspace add/modify form
+__workspace_members=Workspace members
+__workspace_view=Workspace view
 __zonName=Zon user name
 
 administration.configure_ldap=Configure LDAP
@@ -547,6 +549,7 @@ toolbar.menu.accessControl=Access control
 toolbar.menu.configuration=Configure
 toolbar.menu.definition_builder=Definition builder
 toolbar.menu.addFolder=Add folder
+toolbar.menu.addWorkspace=Add workspace
 toolbar.display_styles=Display styles
 toolbar.menu.display_style_vertical=Show entries at the bottom
 toolbar.menu.display_style_accessible=Accessible
