Work on workspaceand folders forms and views

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -14,6 +14,7 @@ __add_a_new_workspace_view=Add a new workspace definition
 __alignment=Alignment
 __allow_multiple=Allow multiple
 __attach_files=Attach files
+__binder_name=Unique name
 __box=Box
 __button_text=Button text
 __calendar_view=Calendar view
@@ -79,6 +80,7 @@ __general_layout_options=General layout options
 __graphic=Graphic
 __has_a_duration=Has a duration (start and end times)?
 __height_px=Height (px)
+__help_binder_name=This name provides a unique "user-friendly" handle for use when sending email to a folder.
 __help_data_name=The "data name" is the key used to store this element in the data base.<br>This value must be unique across elements in this entry type.<br>It should start with an alphabetic character and not contain any spaces.<br>Legal characters include alphabetic characters (a-z), numeric characters, hyphen and underscore.
 __help_form_button_alignment=Select whether the buttons should be aligned to the right or left on the page.
 __help_forum_view_type=Specify the type of folder: entry folders show a list of entries; file folders show a list of files; calendar folders show the entries in a date grid.
