--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -14,7 +14,7 @@ __add_a_new_workspace_view=Add a new workspace definition
 __alignment=Alignment
 __allow_multiple=Allow multiple
 __attach_files=Attach files
-__binder_name=Unique name
+__binder_name=Name (must be unique; no spaces)
 __box=Box
 __button_text=Button text
 __calendar_view=Calendar view
@@ -545,7 +545,9 @@ schedule.weekly=Weekly (on the days selected below)
 
 selected.none=--none--
 
-toolbar.add=Add entry
+toolbar.add=Add
+toolbar.addEntry=Add entry
+toolbar.addProfile=Add profile
 toolbar.administration=Administration
 toolbar.menu.accessControl=Access control
 toolbar.menu.configuration=Configure
