--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -6,7 +6,7 @@
 __accessControls=Access controls
 __add=Add
 __add_a_new_entry_definition=Add a new entry definition
-__add_a_new_forum_view=Add a new folder view
+__add_a_new_folder_view=Add a new folder view
 __add_a_new_profile_view=Add a new profile listing view
 __add_a_new_profile_entry_view=Add a new profile entry definition
 __add_a_new_workflow_process=Add a new workflow process
@@ -34,6 +34,9 @@ __date=Date
 __default_entry_view=Default entry view
 __default_workspace_view=Default workspace view
 __internal_webdav=Internal WebDAV server
+__definition_default_entry_view=Entry
+__definition_default_folder_view=Folder
+__definition_default_workspace_view=Workspace
 __definitions=Definitions
 __delete=Delete
 __deleteAccess=Delete access
@@ -73,9 +76,9 @@ __form_elements=Entry specific form elements
 __form_elements_common=Generic form elements
 __form_name=Form name
 __form_jsp_name=Form jsp name
-__forum_view=Forum view
-__forum_view_definition=Forum view definition
-__forum_views=Forum views
+__folder_view=Folder view
+__folder_view_definition=Folder view definition
+__folder_views=Folder views
 __general_layout_options=General layout options
 __graphic=Graphic
 __has_a_duration=Has a duration (start and end times)?
@@ -83,7 +86,7 @@ __height_px=Height (px)
 __help_binder_name=This name provides a unique "user-friendly" handle for use when sending email to a folder.
 __help_data_name=The "data name" is the key used to store this element in the data base.<br>This value must be unique across elements in this entry type.<br>It should start with an alphabetic character and not contain any spaces.<br>Legal characters include alphabetic characters (a-z), numeric characters, hyphen and underscore.
 __help_form_button_alignment=Select whether the buttons should be aligned to the right or left on the page.
-__help_forum_view_type=Specify the type of folder: entry folders show a list of entries; file folders show a list of files; calendar folders show the entries in a date grid.
+__help_folder_view_type=Specify the type of folder: entry folders show a list of entries; file folders show a list of files; calendar folders show the entries in a date grid.
 __help_graphic_constraints=Specify the maximum width and height of the graphic. The graphic will be scaled to fit within those maximum values. The original aspect ratio will be maintained.
 __help_mark_as_inline=Mark an item as "Inline" if you want to put multiple items next to each other on the page.
 __help_radio_string=Enter the string to be displayed next to the radio button.
@@ -455,8 +458,8 @@ folder.label.description=Description
 folder.add.title=Add folder
 
 forum.notConfigured=The portlet preferences are not set. Choose the edit button to configure the portlet.
-forum.selectForums=Select the forums to be shown:
-forum.selectedForums=Currently selected forums:
+forum.selectForums=Select the folders to be shown:
+forum.selectedForums=Currently selected folders:
 forum.unread=Unread entries
 
 general.notLoggedIn=Your session has timed out. Please log in again.
@@ -468,7 +471,7 @@ icon.resize=Resize
 
 incoming.alias=Alias
 incoming.aliases=Aliases
-incoming.forums=Associated forum(s)
+incoming.forums=Associated folder(s)
 incoming.schedule_title=Specify when e-mail is fetched from the mail server
 incoming.forum_title=Configure incoming e-mail
 incoming.job_title=Set the incoming e-mail schedule
