--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -16,6 +16,7 @@ __allow_multiple=Allow multiple
 __attach_files=Attach files
 __binder_name=Name (must be unique; no spaces)
 __box=Box
+__browseboxWidth=Width of the browse field on the form
 __button_text=Button text
 __calendar_view=Calendar view
 __can_recur=Can recur?
@@ -168,6 +169,8 @@ __stopParallelThread=Stop a workflow thread
 __storage_media=Repository system
 __style=Style
 __text=Text
+__textareaWidth=Width of the text area on the form
+__textboxWidth=Width of the text box on the form
 __title=Title
 __tool_bar=Tool bar
 __toState=To state
@@ -353,6 +356,7 @@ definition.error.noElement=Error: element no longer exists
 definition.error.notAnInteger=Error: not an integer
 definition.form_preview=Form preview
 definition.loading=Loading...
+definition.noOptions=--no items are available for selection--
 definition.select_item=Select the item that you want to work on...
 definition.select_item_select=--make a selection--
 definition.select_reply_styles=--select reply types--
