Give better error message if file does not exist

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -430,6 +430,7 @@ exception.notAvailable.message=That resource is not available.
 
 exception.contactAdmin=Please contact your System Administrator for assistance.
 
+file.error=File error
 fileupload.error.other=Error processing file
 fileupload.error.filtering=Error filtering file content
 fileupload.error.storing.primary.file=Error storing primary file
