--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -430,6 +430,8 @@ exception.notAvailable.message=That resource is not available.
 
 exception.contactAdmin=Please contact your System Administrator for assistance.
 
+favorites=Favorites
+
 file.error=File error
 fileupload.error.other=Error processing file
 fileupload.error.filtering=Error filtering file content
