Favorites base level

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -431,6 +431,7 @@ exception.notAvailable.message=That resource is not available.
 exception.contactAdmin=Please contact your System Administrator for assistance.
 
 favorites=Favorites
+favorites.delete=Delete (drag here to delete)
 
 file.error=File error
 fileupload.error.other=Error processing file
