Fix access control form

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -560,19 +560,21 @@ toolbar.add=Add
 toolbar.addEntry=Add entry
 toolbar.addProfile=Add profile
 toolbar.administration=Administration
+toolbar.delete=Delete
+toolbar.display_styles=Display styles
 toolbar.menu.accessControl=Access control
 toolbar.menu.configuration=Configure
 toolbar.menu.definition_builder=Definition builder
 toolbar.menu.addFolder=Add folder
 toolbar.menu.addWorkspace=Add workspace
-toolbar.display_styles=Display styles
+toolbar.menu.delete_workspace=Delete this workspace
 toolbar.menu.display_style_vertical=Show entries at the bottom
 toolbar.menu.display_style_accessible=Accessible
 toolbar.menu.display_style_iframe=Show entries as an overlay
 toolbar.menu.display_style_popup=Show entries in a pop-up window
-toolbar.reply=Reply
-toolbar.delete=Delete
+toolbar.menu.move_workspace=Move this workspace
 toolbar.modify=Modify
+toolbar.reply=Reply
 toolbar.showUnseen=Show count of recent unread entries
 
 userlist.dragLeft=Drag to the left to add a name.
