--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -16,6 +16,9 @@ __allow_multiple=Allow multiple
 __attach_files=Attach files
 __binder_name=Name (must be unique; no spaces)
 __box=Box
+__box_rounded=Rounded corners
+__box_square=Square with border
+__box_square_no_border=Square with no border
 __browseboxWidth=Width of the browse field on the form
 __button_text=Button text
 __calendar_view=Calendar view
@@ -47,7 +50,9 @@ __divider=Divider
 __emailAddress=Email address
 __endState=End state
 __entry_attachments=Entry attachments
+__entry_creator=Entry creator
 __entry_data_item=Entry data item
+__entry_date=Entry creation date
 __entry_definition=Entry definition
 __entry_definitions=Entry definitions
 __entry_form_definition=Entry form definition
@@ -565,6 +570,7 @@ toolbar.display_styles=Display styles
 toolbar.menu.accessControl=Access control
 toolbar.menu.configuration=Configure
 toolbar.menu.definition_builder=Definition builder
+toolbar.menu.delete_folder=Delete this folder
 toolbar.menu.addFolder=Add folder
 toolbar.menu.addWorkspace=Add workspace
 toolbar.menu.delete_workspace=Delete this workspace
@@ -572,6 +578,7 @@ toolbar.menu.display_style_vertical=Show entries at the bottom
 toolbar.menu.display_style_accessible=Accessible
 toolbar.menu.display_style_iframe=Show entries as an overlay
 toolbar.menu.display_style_popup=Show entries in a pop-up window
+toolbar.menu.move_folder=Move this folder
 toolbar.menu.move_workspace=Move this workspace
 toolbar.modify=Modify
 toolbar.reply=Reply
