Make calendar work again

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -581,6 +581,7 @@ toolbar.menu.display_style_popup=Show entries in a pop-up window
 toolbar.menu.move_folder=Move this folder
 toolbar.menu.move_workspace=Move this workspace
 toolbar.modify=Modify
+toolbar.move=Move
 toolbar.reply=Reply
 toolbar.showUnseen=Show count of recent unread entries
 
