Fix indexing of custom attributes Change notification builder to not use "category" field from definition.xml file

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -167,6 +167,7 @@ __selection_data_name=Selection data name
 __selection_string=Selection string
 __simple_text_area=Simple text area
 __size=Size
+__standard_entry_options=Standard entry elements
 __startParallelThread=Start a parallel workflow thread
 __startState=Start state
 __state=State
