--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -372,6 +372,7 @@ edit=edit
 entry.noTitle=no title
 
 errorcode.acl.denied={0} has no {1} access to the object
+errorcode.locked.by.another.user=For entry ''{0}'' the file ''{2}'' in repository ''{1}'' is locked by ''{3}''
 errorcode.checked.out.by.other=For entry ''{0}'' the file ''{1}'' is already checked out by ''{2}''
 errorcode.content.filter=Failed to filter the content of ''{0}''
 errorcode.definition.invalid=Invalid definition ''{0}''
@@ -379,6 +380,7 @@ errorcode.definition.operation.invalid=Invalid operation
 errorcode.folder.hierarchy.invalid=The hierarchy of the folder ''{0}'' is invalid
 errorcode.function.exists=Function ''{0}'' already exists
 errorcode.library.folderentry.exists="An entry with the title ''{0}'' already exists
+errorcode.lock.id.mismatch=The supplied lock token id does not match
 errorcode.no.binder.by.the.id="No such binder by the id ''{0}''
 errorcode.no.binder.by.the.name="No such binder by the name ''{0}''
 errorcode.no.definition.by.the.id=No such definition by the id ''{0}''
