--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -107,6 +107,7 @@ __html=HTML
 __html_bottom=HTML bottom
 __html_editor_text_area=HTML editor text area
 __html_top=HTML top
+__icon=Icon
 __id=ID
 __initialState=Initial state
 __inline=Inline
@@ -455,17 +456,23 @@ filter.author=Entry creator
 filter.commonElements=--common elements--
 filter.confirmDelete=Please confirm that you want to delete the filter named:
 filter.creationDate=Entry creation date
+filter.deleteTerm=Delete this term
 filter.enterName=Please fill in the filter name field.
 filter.entryAttributes=Entry attributes
 filter.filter=Filter
 filter.filterAddModDelete=Add, modify or delete filters
 filter.filterName=Filter name
 filter.modificationDate=Last modification date
+filter.onOrAfter=On or after...
+filter.onOrBefore=On or before...
 filter.searchText=Search text
+filter.selectDateOption=--select a date filter option--
 filter.selectFilter=--select the filter to be modified or deleted--
-filter.selectFilterType=Select the type of filter to be added...
+filter.selectFilterType=Select the terms of the filter to be added...
 filter.terms=Filter terms
 filter.title=Title
+filter.withinNextFewDays=Within the next few days...
+filter.withinPastFewDays=Within the past few days...
 filter.workflowStates=Workflow states
 
 folder.label.title=Title
