Add icons to navbar and definition builder

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -108,6 +108,10 @@ __html_bottom=HTML bottom
 __html_editor_text_area=HTML editor text area
 __html_top=HTML top
 __icon=Icon
+__icons.entry=Entry icons
+__icons.folder=Folder icons
+__icons.profileList=Profile list icons
+__icons.workspace=Workspace icons
 __id=ID
 __initialState=Initial state
 __inline=Inline
@@ -364,6 +368,7 @@ definition.error.notAnInteger=Error: not an integer
 definition.form_preview=Form preview
 definition.loading=Loading...
 definition.noOptions=--no items are available for selection--
+definition.select_icon=--select an icon--
 definition.select_item=Select the item that you want to work on...
 definition.select_item_select=--make a selection--
 definition.select_reply_styles=--select reply types--
