--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -382,7 +382,7 @@ errorcode.locked.by.another.user=For entry ''{0}'' the file ''{2}'' in repositor
 errorcode.checked.out.by.other=For entry ''{0}'' the file ''{1}'' is already checked out by ''{2}''
 errorcode.content.filter=Failed to filter the content of ''{0}''
 errorcode.definition.invalid=Invalid definition ''{0}''
-errorcode.definition.operation.invalid=Invalid operation
+errorcode.definition.operation.invalid=Invalid operation ''{0}''
 errorcode.folder.hierarchy.invalid=The hierarchy of the folder ''{0}'' is invalid
 errorcode.function.exists=Function ''{0}'' already exists
 errorcode.library.folderentry.exists="An entry with the title ''{0}'' already exists
