Enhance file module with appropriate locking scheme that works in conjunction with entry reservation.

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -378,8 +378,6 @@ edit=edit
 entry.noTitle=no title
 
 errorcode.acl.denied={0} has no {1} access to the object
-errorcode.locked.by.another.user=For entry ''{0}'' the file ''{2}'' in repository ''{1}'' is locked by ''{3}''
-errorcode.checked.out.by.other=For entry ''{0}'' the file ''{1}'' is already checked out by ''{2}''
 errorcode.content.filter=Failed to filter the content of ''{0}''
 errorcode.definition.invalid=Invalid definition ''{0}''
 errorcode.definition.operation.invalid=Invalid operation ''{0}''
@@ -402,6 +400,7 @@ errorcode.no.user.by.the.id=No such user by the id ''{0}''
 errorcode.no.user.by.the.name=No such user by the name ''{0}''
 errorcode.no.workspace.by.the.id=No such workspace by the id ''{0}''
 errorcode.no.workspace.by.the.name=No such workspace by the name ''{0}''
+errorcode.reserved.by.another.user=Entry ''{0}'' is reserved by ''{1}''
 errorcode.salary.maxed.out=Cannot honor the request because {0}''s salary is capped at ${1}
 errorcode.operation.denied=<i>{0}</i> is unauthorized to perform <i>{1}</i> operation to the work area {2}
 errorcode.unauthenticated.access=Access denied. User is unauthenticated or the session has expired.
@@ -455,6 +454,12 @@ fileupload.error.generating.scaled.file=Error generating scaled file
 fileupload.error.storing.scaled.file=Error storing scaled file
 fileupload.error.generating.thumbnail.file=Error generating thumbnail file
 fileupload.error.storing.thumbnail.file=Error storing thumbnail file
+fileupload.error.deleting.primary.file=Error deleting primary file
+fileupload.error.deleting.scaled.file=Error deleting scaled file
+fileupload.error.deleting.thumbnail.file=Error deleting thumbnail file
+fileupload.error.canceling.lock=Error canceling lock
+fileupload.error.locked.by.another.user=File locked by another user
+fileupload.error.reserved.by.another.user=Entity reserved by another user
 
 filter.add=Add a new filter
 filter.author=Entry creator
