--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -381,6 +381,7 @@ errorcode.acl.denied={0} has no {1} access to the object
 errorcode.content.filter=Failed to filter the content of ''{0}''
 errorcode.definition.invalid=Invalid definition ''{0}''
 errorcode.definition.operation.invalid=Invalid operation ''{0}''
+errorcode.files.locked.by.other.users=One or more files are locked by other users
 errorcode.folder.hierarchy.invalid=The hierarchy of the folder ''{0}'' is invalid
 errorcode.function.exists=Function ''{0}'' already exists
 errorcode.library.folderentry.exists="An entry with the title ''{0}'' already exists
