Add icons to folders and workspaces Add "modify folder" command

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -599,7 +599,9 @@ toolbar.menu.display_style_vertical=Show entries at the bottom
 toolbar.menu.display_style_accessible=Accessible
 toolbar.menu.display_style_iframe=Show entries as an overlay
 toolbar.menu.display_style_popup=Show entries in a pop-up window
+toolbar.menu.modify_folder=Modify this folder
 toolbar.menu.move_folder=Move this folder
+toolbar.menu.modify_workspace=Modify this workspace
 toolbar.menu.move_workspace=Move this workspace
 toolbar.modify=Modify
 toolbar.move=Move
