Workflow transition on conditions

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -189,6 +189,7 @@ __toStateAfterWait=When the selected threads have all ended, transition to state
 __transition=Transition
 __transitionConditional=Conditional transition
 __transitionManual=Manual transition
+__transition_condition_on_conditions=Transition on conditions met
 __transition_condition_on_date=Transition when date past
 __transition_condition_on_days=Days
 __transition_condition_on_elapsed_time=Transition after time elapsed
