--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -12,6 +12,8 @@ __add_a_new_profile_entry_view=Add a new profile entry definition
 __add_a_new_workflow_process=Add a new workflow process
 __add_a_new_workspace_view=Add a new workspace definition
 __alignment=Alignment
+__allMustMatch=All conditions must be met
+__allMustMatchHelp=When this option is selected, all conditions must be met before the transition will take place. If this option is not selected, then if any condition is met, the transition will occur.
 __allow_multiple=Allow multiple
 __attach_files=Attach files
 __binder_name=Name (must be unique; no spaces)
@@ -101,6 +103,7 @@ __help_selection_data_name=Enter a unique name, consisting of lowercase alpha-nu
 __help_selection_string=Enter the string to be displayed in the selectbox.
 __help_storage_media=This field specifies where the uploaded files will be stored.
 __help_title_field=The Title field must always be included in the entry. It can appear only once, and it cannot be deleted.
+__help_workflow_condition=After clicking "OK", click on the "Add" button to specify the transition conditions.
 __help_workspace_view_type=Standard = simple workspace view; Team = team oriented workspace; Dashboard = workspace with status roll-up
 __homepage=Homepage
 __html=HTML
@@ -219,8 +222,13 @@ __view_entry_selectbox=View entry selectbox
 __view_jsp_name=View jsp name
 __waitForParallelThread=Wait for parallel thread(s) to end
 __width=Width
+__workflow_entry_condition=Workflow transition condition
 __workflow_process=Workflow process
 __workflow_processes=Workflow processes
+__workflow_question=Workflow question
+__workflow_question_text=Question text
+__workflow_response=Workflow response
+__workflow_response_text=Response text
 __workflow_variable=Workflow variable
 __workflow_variable_name=Variable name
 __workflow_variable_value=Variable value
