--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -377,6 +377,10 @@ definition.error.notAnInteger=Error: not an integer
 definition.form_preview=Form preview
 definition.loading=Loading...
 definition.noOptions=--no items are available for selection--
+definition.selectEntryElement=Select an element within the entry
+definition.selectEntryOperation=Select the condition
+definition.selectEntryType=Select an entry type
+definition.selectEntryValue=Select the value to be matched
 definition.select_icon=--select an icon--
 definition.select_item=Select the item that you want to work on...
 definition.select_item_select=--make a selection--
