--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -369,6 +369,14 @@ calendar.view.popupAltText=Navigate to a different day, week or month.
 common.select.none=--none--
 
 definition.builder=Definition builder
+definition.currentWorkflowConditionDuration=Duration
+definition.currentWorkflowConditionDurationDays=day(s)
+definition.currentWorkflowConditionDurationHours=hour(s)
+definition.currentWorkflowConditionDurationMinutes=minute(s)
+definition.currentWorkflowConditionEntryType=Entry type
+definition.currentWorkflowConditionElementName=Element name
+definition.currentWorkflowConditionOperation=Operation
+definition.currentWorkflowConditionValues=Values
 definition.error.illegalMoveInto=Error: The target element cannot receive this element
 definition.error.invalidCharacter=Error: invalid character entered
 definition.error.nameNotUnique=Error: The specified name must be unique
@@ -377,6 +385,19 @@ definition.error.notAnInteger=Error: not an integer
 definition.form_preview=Form preview
 definition.loading=Loading...
 definition.noOptions=--no items are available for selection--
+definition.operation_equals=equals
+definition.operation_started=Start date passed
+definition.operation_ended=End date passed
+definition.operation_beforeStart=Before the start date
+definition.operation_afterStart=After the start date
+definition.operation_beforeEnd=Before the end date
+definition.operation_afterEnd=After the end date
+definition.operation_beforeDate=Before the date
+definition.operation_afterDate=After the date
+definition.operation_datePassed=Date passed
+definition.operation_checked=Checked
+definition.operation_checkedNot=Not checked
+definition.select_conditionDefinition=--select an entry type--
 definition.selectEntryElement=Select an element within the entry
 definition.selectEntryOperation=Select the condition
 definition.selectEntryType=Select an entry type
@@ -386,6 +407,7 @@ definition.select_item=Select the item that you want to work on...
 definition.select_item_select=--make a selection--
 definition.select_reply_styles=--select reply types--
 definition.workflow_save_layout=Save layout
+definition.workflowCondition=Workflow condition
 
 edit=edit
 entry.noTitle=no title
