Rename transition items Add radio button support

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -12,8 +12,6 @@ __add_a_new_profile_entry_view=Add a new profile entry definition
 __add_a_new_workflow_process=Add a new workflow process
 __add_a_new_workspace_view=Add a new workspace definition
 __alignment=Alignment
-__allMustMatch=All conditions must be met
-__allMustMatchHelp=When this option is selected, all conditions must be met before the transition will take place. If this option is not selected, then if any condition is met, the transition will occur.
 __allow_multiple=Allow multiple
 __attach_files=Attach files
 __binder_name=Name (must be unique; no spaces)
@@ -122,6 +120,10 @@ __lastName=Last name
 __layout_options=Layout options
 __left=Left
 __legend=Legend
+__matchEntryData=Match entry data values
+__matchEntryDataHelp=When this "All" is selected, all specified data values must match before the transition will take place. Otherwise, if any specified data value is matched, the transition will occur.
+__matchAll=Match all
+__matchAny=Match any
 __max_graphic_height=Maximum graphic height (in pixels)
 __max_graphic_width=Maximum graphic width (in pixels)
 __middleName=Middle name
@@ -192,18 +194,18 @@ __toStateAfterWait=When the selected threads have all ended, transition to state
 __transition=Transition
 __transitionConditional=Conditional transition
 __transitionManual=Manual transition
-__transition_condition_on_conditions=Transition on conditions met
-__transition_condition_on_date=Transition when date past
-__transition_condition_on_days=Days
-__transition_condition_on_elapsed_time=Transition after time elapsed
-__transition_condition_on_hours=Hours
-__transition_condition_on_mins=Minutes
-__transition_condition_on_modify=Transition on modify
-__transition_condition_on_reply=Transition on reply
-__transition_condition_on_response=Transition on response
-__transition_condition_on_variable=Transition on a variable
-__transition_condition_on_variable_name=Variable name
-__transition_condition_on_variable_value=Variable value
+__transition_on_entry_data=Transition on entry data values
+__transition_on_date=Transition when date past
+__transition_on_days=Days
+__transition_on_elapsed_time=Transition after time elapsed
+__transition_on_hours=Hours
+__transition_on_mins=Minutes
+__transition_on_modify=Transition on modify
+__transition_on_reply=Transition on reply
+__transition_on_response=Transition on response
+__transition_on_variable=Transition on a variable
+__transition_on_variable_name=Variable name
+__transition_on_variable_value=Variable value
 __transitionInAccess=Transition into this state
 __transitionOutAccess=Transition out of this state
 __transitions=Transitions
@@ -222,7 +224,7 @@ __view_entry_selectbox=View entry selectbox
 __view_jsp_name=View jsp name
 __waitForParallelThread=Wait for parallel thread(s) to end
 __width=Width
-__workflow_entry_condition=Workflow transition condition
+__workflow_entry_data_value=Entry data value
 __workflow_process=Workflow process
 __workflow_processes=Workflow processes
 __workflow_question=Workflow question
@@ -230,6 +232,9 @@ __workflow_question_text=Question text
 __workflow_response=Workflow response
 __workflow_response_text=Response text
 __workflow_variable=Workflow variable
+__workflow_variable_set=Set a workflow variable
+__workflow_variable_set_on_state_enter=Set a workflow variable when the state is entered
+__workflow_variable_set_on_transition=Set a workflow variable when this transition occurs
 __workflow_variable_name=Variable name
 __workflow_variable_value=Variable value
 __workspace_attachments=Attached files
