Fix location of navbar and toolbar

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -31,6 +31,7 @@ __close=Close
 __close_button=Close button
 __country=Country
 __custom_jsp=Custom jsp
+__dashboard_canvas=Dashboard
 __data_item_name=Data item name
 __data_items_from_the_entry_form=Data items from the Entry Form
 __data_name=Data name
@@ -76,12 +77,14 @@ __folder_listing=Folder listing
 __folder_folder=Entry folder
 __folder_file=File folder
 __folder_event=Calendar
+__folderName=Folder naqme
 __form=Form
 __form_buttons=Form buttons
 __form_elements=Entry specific form elements
 __form_elements_common=Generic form elements
 __form_name=Form name
 __form_jsp_name=Form jsp name
+__folder_form=Folder form
 __folder_view=Folder view
 __folder_view_definition=Folder view definition
 __folder_views=Folder views
@@ -155,10 +158,11 @@ __profile_entry_form_definition=Profile form definition
 __profile_entry_layout_options=Layout options
 __profile_entry_view=Profile view
 __profile_entry_view_definition=Profile view definition
+__profile_form=Profile listing form
 __profile_listing=Profile listing
 __profile_name=User name
 __profile_title=User title
-__profile_view=Profile listing
+__profile_view=Profile listing view
 __profile_view_definition=Profile listing definition
 __profile_views=Profile listings
 __radio_button=Radio button
